--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "axios": "^1.12.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "gsap": "^3.14.2",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.545.0",
